--- a/Lending_main/templates/P2PMainPage.html
+++ b/Lending_main/templates/P2PMainPage.html
@@ -58,7 +58,7 @@
         <a href="/depositor" class="button animate__animated animate__fadeInLeft">Depositor Section</a>
         <a href="/borrower" class="button animate__animated animate__fadeInRight">Borrower Section</a>
         <br>
-        <a href="/" class="button animate__animated animate__fadeInUp">Back to Index</a>
+        <a href="/" class="button animate__animated animate__fadeInUp">Back to Registere</a>
     </div>
     <script src="{{ url_for('static', filename='web3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='app.js') }}"></script>
